test/errors/wav-open.rom
Error in `wav-open.asm` on line 2: Could not open `wav-open.wav`
